quinto commit modificaciones1

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,20 @@
     transform: rotate(360deg);
   }
 }
+
+.navBar{
+  background-color: #ff6961;
+}
+
+
+/*Paleta de colores:
+color1: #840007
+color2: #a62520
+color3: #c94139
+color4: #ed5c53
+color5: #ff6961
+color6: #ff7c70
+color7: #ff9e8e
+color8: #ffbeae
+color9: #ffdece
+complementario: #61f7ff*/
