--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,17 @@ background-size: 80px 80px;
 background-repeat: repeat;
 }
 
+#cart{
+  height: 100vh;
+}
+
+span{
+  text-decoration: none;
+  color: white;
+  margin-left: 3px;
+  margin-right: 7px;
+}
+
 a a{
   text-decoration: none;
   color: white
@@ -67,6 +78,55 @@ a a{
 
 .navBar.container-fluid a{
   color: white;
+}
+
+
+.item-count {
+  display: flex;
+  justify-content: space-between;
+  max-width: 400px;
+  gap: 5px
+}
+
+.item-count > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+  border: 1px solid #f0f0f0;
+  background-color: #a2edce;
+  font-weight: bold;
+  color: #4a3bcf;
+}
+
+.item-count button, .item-count button:focus, .item-count button:active {
+  background-color: #dcd9f8 ;
+  border: 1px solid #766ae0 ;
+  color: #4a3bcf;
+  outline: #4a3bcf;
+}
+
+.item-count button:hover {
+  background-color: #4a3bcf;
+  border: 1px solid black;
+  color: #ffb2a9;
+  font-weight: bold;
+}
+
+
+.item-count > button {
+  background-color: #a2edce
+}
+
+.item-count button:hover {
+  color: white;
+}
+
+#footer{
+/*   position: fixed; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .h-6.w-6{
